--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*
 Theme Name: Autogear Landing
 Theme URI: https://maya.lk/
-Author: Maya Hive
+Author: Maya Creations
 Author URI: https://maya.lk/
 Description: Theme for Autogear Landing
 */
