--- a/assets/css/less/utilities/_common.less
+++ b/assets/css/less/utilities/_common.less
@@ -52,17 +52,20 @@ p {
 }
 
 .theme-btn {
-    background-color: @btn-color;
-    color: #FFF;
-    padding: 17px 30px 15px;
+    background: #AC41AE;
+    font-family: 'Noto Sans', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    color: #ffffff;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 38px;
+    text-transform: uppercase;
     display: inline-block;
     position: relative;
     overflow: hidden;
     z-index: 1;
     border: 0;
-    font-weight: 600;
-    text-transform: uppercase;
-    border-radius: 0px;
     line-height: initial;
     outline: 0px;
     text-align: center;
@@ -165,7 +168,7 @@ p {
     
     h4 {
         color: #8B3C44;
-        font-family: 'Noto Sans', sans-serif;
+        font-family: 'Noto Sans', sans-serif !important;
         font-weight: 700;
         font-size: 36px;
     }
