--- a/assets/css/less/_home.less
+++ b/assets/css/less/_home.less
@@ -4,7 +4,7 @@ section.banner-section {
     height: 100%;
     margin-top: 0;
     // left: 0;
-    padding: 150px 0 0px;
+    padding: 100px 0 0px;
 
     @media @mobileTab {
         text-align: center;
@@ -138,34 +138,34 @@ section.section-welcome-to {
                 font-weight: 700;
             } 
 
+            .content{
+                padding: 0 250px 0 250px;
+            }
 
-            .right-img{
-                position: absolute;
+            img{
                 border-radius: 166px;
                 width: 185px;
                 height: 185px;
                 object-fit: cover; 
-                right: 0;
+            }
+            .right-img{
+                position: absolute;               
+                right: 50px;
                 top: 0;
-                margin-top: 80px;
             }
 
             .boy-circle {
                 width: 108px;
                 height: 108px;
-                background: rgb(254, 225, 221);
+                background: #fee1dd;
                 position: absolute;
-                top: 218px;
-                right: -9px;
+                top: 135px;
+                right: 100px;
                 border-radius: 50%;
             }
         
             .left-img{
                 position: absolute;
-                border-radius: 166px;
-                width: 185px;
-                height: 185px;
-                object-fit: cover; 
                 left: 0px;
                 bottom: -60px;
             }
@@ -179,122 +179,121 @@ section.section-welcome-to {
                 bottom: -282px;
                 left: 12px;
             }
-            
-            
-            
-            img{
-                position: absolute;
-                border-radius: 166px;
-                width: 185px;
-                height: 185px;
-                object-fit: cover; 
+
+            .welcome-btn {
+                padding: 17px 116px 17px 116px;
             }
         }
-
-        
-
-    }
-
-    
-
-    
-
-
-    
-    
-   
-    
-    .boy-circle {
-        width: 108px;
-        height: 108px;
-        background: rgb(254, 225, 221);
-        position: absolute;
-        top: 218px;
-        right: -9px;
-        border-radius: 50%;
-    }
-    
-    .girl-left {
-        left: 0px;
-        bottom: -60px;
-       /* border-radius: 166px; */
-    }
-    
-    .girl-ring {
-        border-radius: 50%;
-        border: 25px solid rgb(255, 255, 255);
-        width: 313px;
-        height: 313px;
-        position: absolute;
-        bottom: -282px;
-        left: 12px;
-    }
-    
-    .para-1 {
-        padding: 20px 0 20px 0;
-        font-weight: 700;
-        /* increse line height by myself */
-        line-height: 28px; 
-    }
-    
-    .para-2 {
-        padding-bottom: 67px;
-        font-weight: 700;
-         /* increse line height by myself */
-        line-height: 28px;
-    }
-    
-    .welcome-btn {
-        padding: 17px 116px 17px 116px;
     }
 }
 
-section.packages-section {
-    background-color: @theme-bg-light;
-    padding: @default-margin 0;
+section.section-services {
+    background: #FFEAEC;
     text-align: center;
+    margin-top: 140px;
 
     .content-wrapper {
-        margin-bottom: 40px;
+        padding: 60px 0 60px 0;
+        text-align: center;
+
 
         h2 {
             margin-bottom: 10px;
         }
-    }
 
-    .item {
-        .price {
-            width: 250px;
-            height: 250px;
-            background-color: #FFF;
-            border-radius: 50%;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            margin: 0 auto 20px;
-            font-size: 5rem;
-            font-weight: 700;
 
-            span {
-                font-size: 2rem;
-                color: @primary-color;
-            }
-        }
 
-        h5 {
-            font-weight: 600;
-            font-size: 18px;
-            margin-bottom: 10px;
-        }
-    }
+.section-services {
+    background: #FFEAEC;
+    position: relative;
+    padding-bottom: 50px;
+}
+.service-content {
+    padding-top: 70px;
+    text-align: center;
+}
+.service-content P {
+    padding: 30px 0 80px 0;
+}
+.service-btn-class a{
+    margin-left: 30%;
+}
+.service-btn {
+    padding-left: 93px;
+    padding-right: 93px;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    z-index: 5;
+}
+.col-image img {
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 70px 0;
+    padding: 30px;
+}
 
-    .row {
-        gap: 50px 0;
+.col-image p {
+    width: 125px;
+    height: 125px;
+    background: #ED9AA2;
+    position: absolute;
+    bottom: 65px;
+    right: 105px;
+    border-radius: 50%;
+    font-size: 18px;
+    font-weight: 800;
+    font-family: 'Nunito Sans', sans-serif;
+    color: #ffffff;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top: 50px;    
+}
+
+.column-image1 {
+    transform: rotate(350deg);
+}
+
+.column-image3 {
+    transform: rotate(10deg);
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 72px;
+    margin-top: 49px;
+}
+
+.column-grid {
+    position: relative;
+}
+
+
+.sec3-circle p {
+    width: 125px;
+    height: 125px;
+    background: #ED9AA2;
+    border-radius: 50%;
+    font-size: 18px;
+    font-weight: 800;
+    font-family: 'Nunito Sans', sans-serif;
+    color: #ffffff;
+    position: absolute;
+    bottom: 70px;
+    left: 130px;
+    padding: 50px 5px;
+    text-align: center;
+}
+
     }
 }
 
 section.contact-section {
-    background-color: @secondary-color;
+    background-color: none;
     padding: @default-margin 0;
     margin-top: 0;
 
@@ -405,6 +404,7 @@ section.areas-section {
             position: relative;
             padding-top: 120%;
             margin-bottom: 15px;
+            border-radius: 50%;
         }
 
         h3 {
