--- a/assets/css/less/utilities/_header.less
+++ b/assets/css/less/utilities/_header.less
@@ -75,10 +75,11 @@ header.main-header {
 
                     a {
                         text-transform: capitalize;
-                        font-family: @font-secondary;
-                        font-size: 20px;
+                        font-family: 'Noto Sans', sans-serif;
+                        font-size: 14px;
                         line-height: normal;
-                        color: #611f1f;
+                        color: #FFFFFF;
+                        font-weight: 700;
                     }
 
                     &.menu-item-has-children {
@@ -92,100 +93,7 @@ header.main-header {
                                 margin-left: 10px;
                                 .transitions(400ms);
                             }
-                        }
-
-                        &.active {
-                            a {
-                                &::after {
-                                    transform: rotate(180deg);
-                                }
-                            }
-                        }
-
-                        &::after {
-                            content: unset;
-                        }
-
-                        ul.sub-menu {
-                            flex-direction: column;
-                            visibility: hidden;
-                            position: absolute;
-                            opacity: 0;
-                            .transitions();
-                            width: 300px;
-                            z-index: 10;
-                            background-color: @primary-color;
-                            z-index: 10;
-                            padding: 0px 10px;
-                            top: 35px;
-                            left: -18px;
-
-                            &::before {
-                                content: '';
-                                position: absolute;
-                                border-bottom: solid 10px @primary-color;
-                                border-left: solid 10px transparent;
-                                border-right: solid 10px transparent;
-                                top: -10px;
-                                left: 30px;
-                            }
-
-                            li {
-                                list-style: none;
-                                border-right: 0px !important;
-                                z-index: 5;
-                                margin: 0px !important;
-                                padding: 0px !important;
-                                border-bottom: solid 1px #FFF;
-
-                                a {
-                                    padding: 10px 10px;
-                                    display: inline-block;
-                                    color: #FFF;
-
-                                    &:hover {
-                                        background-color: @primary-color;
-                                        color: #FFF;
-                                    }
-                                }
-
-                                &::after {
-                                    content: unset;
-                                }
-
-                                &:last-child {
-                                    border-bottom: 0px;
-                                }
-
-                                &.menu-item-has-children {
-                                    &>a {
-                                        &::after {
-                                            content: '\f054';
-                                        }
-                                    }
-
-                                    ul.sub-menu {
-                                        top: 0;
-                                        left: calc(~'100% + 30px');
-
-                                        &::before {
-                                            border-right: solid 10px @primary-color;
-                                            border-top: solid 10px transparent;
-                                            border-bottom: solid 10px transparent;
-                                            top: 15px;
-                                            left: -20px;
-                                        }
-                                    }
-                                }
-                            }
-                        }
-
-                        &:hover {
-                            &>ul {
-                                opacity: 1;
-                                visibility: visible;
-                            }
-                        }
+                        }    
                     }
                 }
             }
