--- a/assets/css/less/utilities/_header.less
+++ b/assets/css/less/utilities/_header.less
@@ -101,8 +101,9 @@ header.main-header {
 
         .theme-btn {
             padding: 10px 30px;
-            font-weight: 400;
+            font-weight: 700;
             margin-left: 70px;
+            font-size: 14px !important;
 
             @media @mobileTab {
                 margin-top: 20px;
