--- a/assets/css/less/utilities/_variables.less
+++ b/assets/css/less/utilities/_variables.less
@@ -1,8 +1,8 @@
-@primary-color: #1b86ff;
-@secondary-color: #152636;
+@primary-color: #ffffff;
+@secondary-color: #ED9AA2;
 
 @theme-bg-light: #efefef;
-@bg-color: @primary-color;
+@bg-color: @FFEAEC;
 
 @font-color: #000;
 @font-primary:  'Montserrat', sans-serif;
@@ -29,5 +29,5 @@
 .fontawesome(@content: '') {
     content: @content;
     font-family: "Font Awesome 5 Free";
-    font-weight: 900;
+    font-weight: 700;
 }
