--- a/assets/css/less/utilities/_common.less
+++ b/assets/css/less/utilities/_common.less
@@ -31,7 +31,6 @@ a {
 }
 
 
-
 p {
     font-family: 'Noto Sans', sans-serif;
     font-size: 16px;
@@ -57,7 +56,7 @@ p {
     font-size: 16px;
     font-weight: 700;
     color: #ffffff;
-    padding-top: 10px;
+    padding: 20px 50px 30px 50px;
     padding-bottom: 10px;
     border-radius: 38px;
     text-transform: uppercase;
