--- a/assets/css/less/utilities/_reset.less
+++ b/assets/css/less/utilities/_reset.less
@@ -251,11 +251,11 @@ section {
 	}
 }
 
-@media only screen and (min-width: 1600px) {
-	.container {
-		max-width: 80% !important;
-	}
-}
+// @media only screen and (min-width: 1600px) {
+// 	.container {
+// 		max-width: 80% !important;
+// 	}
+// }
 
 @media only screen and (min-width: 1025px) and (max-width: 1366px) {
 	.container {
