complete web without footer

--- a/assets/css/less/utilities/_reset.less
+++ b/assets/css/less/utilities/_reset.less
@@ -257,11 +257,11 @@ section {
 // 	}
 // }
 
-@media only screen and (min-width: 1025px) and (max-width: 1366px) {
-	.container {
-		max-width: ~'calc(100% - 30px)' !important;
-	}
-}
+// @media only screen and (min-width: 1025px) and (max-width: 1366px) {
+// 	.container {
+// 		max-width: ~'calc(100% - 30px)' !important;
+// 	}
+// }
 
 .fancybox__container {
 	z-index: 20500 !important;
