--- a/assets/css/less/_home.less
+++ b/assets/css/less/_home.less
@@ -3,7 +3,7 @@ section.banner-section {
     width: 100%;
     height: 100%;
     margin-top: 0;
-    padding: 140px 0 0px;
+    // padding: 140px 0 0px;
 
     @media @mobileTab {
         text-align: center;
@@ -14,40 +14,37 @@ section.banner-section {
         
     }
 
-    .full-image {
-        pointer-events: none;
-        width: 100%;
-        height: 100%;
-        margin-top: 0;
+    // .full-image {
+    //     pointer-events: none;
+    //     width: 100%;
+    //     height: 100%;
+    //     margin-top: 0;
        
-        @media @mobileTab {
-            width: 100%;
+    //     @media @mobileTab {
+    //         width: 100%;
             
-        }
-    }
+    //     }
+    // }
 
-    .hero-banner-section .container {
-        height: 100%;
-        padding-top: 50%;
-        position: relative;
-    }
+    
     
 
-    &::before {
-        content: "";
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 42.19%);
-        z-index: -1;
+    // &::before {
+    //     content: "";
+    //     position: absolute;
+    //     top: 0;
+    //     left: 0;
+    //     width: 100%;
+    //     height: 100%;
+    //     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 42.19%);
+    //     z-index: -1;
 
-        @media @mobileTab {
-            content: unset;
-        }
-    }
+    //     @media @mobileTab {
+    //         content: unset;
+    //     }
+    // }
 
+   
 
     .container {
         position: relative;
@@ -62,49 +59,46 @@ section.banner-section {
         .row {
             align-items: flex-end;
         }
-    }
 
-    .social-media-1 {
-        position: absolute;
-        display: flex;
-        padding-bottom: 30px;
-        bottom: 0;
-        right: 0;
-    }
-    
-    .social-media-1 a{
-        font-size: 26px;
-        color: #ffffff;
-        background: #ED9AA2;
-        width: 38px;
-        height: 38px;
-        padding: 20px;
-        border-radius: 50%;
-        margin-right: 20px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .content-wrapper {
-        @media @mobileTab {
-            margin-bottom: 50px;
-        }
-
-        h1 {
-            font-size: 70px;
-            color: #FFF;
-        }
-    }
-
-    .contact-form {
         .content-wrapper {
-            h3 {
-                font-size: 42px;
-                color: @primary-color;
+            @media @mobileTab {
+                margin-bottom: 50px;
             }
-        }
-    }
+    
+            h1 {
+                font-size: 70px;
+                color: #FFF;
+            }
+
+            .hero-banner-section {
+                height: 100%;
+                padding-top: 50%;
+                position: relative;
+            }
+
+            .social-media-1 {
+                position: absolute;
+                display: flex;
+                padding-bottom: 30px;
+                bottom: 0;
+                right: 0;
+            }
+
+            .social-media-1 a{
+                font-size: 26px;
+                color: #ffffff;
+                background: #ED9AA2;
+                width: 38px;
+                height: 38px;
+                padding: 20px;
+                border-radius: 50%;
+                margin-right: 20px;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+            }
+        }       
+    }    
 }
 
 section.section-welcome-to {
@@ -138,7 +132,7 @@ section.section-welcome-to {
             } 
 
             .content{
-                padding: 0 215px 0 215px;
+                padding: 0 160px 0 160px;
             }
 
             img{
@@ -147,8 +141,14 @@ section.section-welcome-to {
                 height: 185px;
                 object-fit: cover; 
             }
+            // .right-img{
+            //     position: absolute;               
+            //     right: -30px;
+            //     top: 0px;
+            // }
+
             .right-img{
-                position: absolute;               
+                position: absolute;
                 right: 0px;
                 top: 0px;
             }
@@ -216,15 +216,16 @@ section.section-services {
             position: relative;
 
             .column-image1 {
-                transform: rotate(350deg);
+                transform: rotate(355deg);
             }
 
             .column-image2{
                 transform: rotate(0deg);
+                margin-bottom: 20px;
             }
 
             .column-image3 {
-                transform: rotate(10deg);
+                transform: rotate(5deg);
             }
         
             img {
@@ -243,7 +244,7 @@ section.section-services {
                 background: #ED9AA2;
                 border-radius: 50%;
                 font-size: 18px;
-                font-weight: 800;
+                font-weight: 700;
                 font-family: 'Nunito Sans', sans-serif;
                 color: #ffffff;
                 position: absolute;
@@ -251,16 +252,14 @@ section.section-services {
                 left: 130px;
                 padding: 50px 5px;
                 text-align: center;
-            }
-
-            
-
-            .theme-btn {
-                padding-left: 93px;
-                padding-right: 93px;                
-            }
+                text-transform: uppercase;
+            }        
         }
-
+        .theme-btn { 
+            margin-top: 50px;
+            padding-left: 93px;
+            padding-right: 93px;                
+        }
 
         h2 {
             margin-bottom: 10px;
@@ -276,16 +275,31 @@ section.testimonials-section{
 
     .row{
         .col-lg-6{
+            img{
+                padding-top: 50px;
+                border-radius: 0 0 50px 0;
+            }
             .square{
                 position: relative;
                 width: 569px;
-                height: 598px;
+                height: 620px;
                 background-color: #FFF;
                 padding: 68px 21px 64px 13px;
                 right: 0;
                 border-radius: 50px 0;
                 text-align: center;
-                margin-left: 111px;
+                
+                img{
+                    padding-top: 0; 
+                    border-radius: 0;                  
+                }
+
+                .content-wrapper{
+                    padding: 60px 70px 50px 70px;
+                    text-align: center;
+
+                }
+                
 
                 h3{
                     font-weight: 700;
@@ -309,14 +323,14 @@ section.testimonials-section{
                 }
 
                 .circle-shape{
-                    width: 230px;
-                    height: 230px;
+                    width: 154px;
+                    height: 154px;
                     border-radius: 50%;
                     background-color: #ED9AA2;
                     position: absolute;
                     color: #fff;
-                    top: 200px;
-                    left: 458px;
+                    top: px;
+                    left: 490px;
                     z-index: 9;
                     text-align: center;
                     padding: 72px 26px 40px 25px;
@@ -324,23 +338,12 @@ section.testimonials-section{
                     font-weight: 700;
                     text-transform: capitalize;
                 }
-                }
-            }           
-        }
+
+                
+            }
+        }           
     }
-
-    .right-img {
-        position: relative;
-        width: 100%;
-        height: 100%;
-
-        img {
-            border-radius: 0 0 50px 0;
-    }
-  } 
-
-
-
+}
 
 section.cosmetic-section{
     position: relative;
@@ -407,14 +410,12 @@ section.cosmetic-section{
                         padding: 20px 0 20px;
                         color: #ED9AA2;
                     }
-                }
-
-                
-                
+                }                
             }
         }        
     }
 }
+
 section.appoinment-section {
     background: #FFEAEC;
     position: relative;
@@ -458,6 +459,182 @@ section.appoinment-section {
         right: 100px;
         bottom: -70px;
     }
-
-
 }
+
+section.Team-section{
+    position: relative;
+
+    .container{
+        .content-wrapper{
+            // padding: 80px 75px 20px;
+            text-align: center;
+            text-transform: capitalize;
+
+            h3{
+                font-weight: 700;
+                font-size: 36px;
+                margin-bottom: 20px 0;
+                text-transform: capitalize;
+                padding: 20px 0 20px;
+                color: #ED9AA2;
+            }
+
+            .team-image{
+                position: relative;
+                padding-top: 100%;
+                width: 100%;
+                height: 50%;  
+                
+                img{
+                    position: absolute;
+                    top: 0;
+                    left: 0;
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    padding: 7%;
+                    border-radius: 50%;
+                }
+            }
+            
+            .row{
+                padding-bottom: 60px;
+                .team-details{
+                    
+                    .team-img-description{
+                        text-align: center;
+                        padding: 0px 0 75px;
+
+                        h4{
+                            font-size: 30px;
+                            font-weight: 700;
+                        }
+                    }
+                    
+                }
+            }
+        }
+    }
+}
+
+section.contact-section{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    padding-bottom: 300px;
+    margin: 0;
+
+    @media @mobileTab {
+        text-align: center;
+    }
+
+    .full-image {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        margin: 0;
+             
+        @media @mobileTab {
+            width: 100%;
+            
+        }
+    }
+    .container{
+        .row {
+            justify-content: end;
+
+            .square{
+                position: relative;
+                width: 569px;
+                height: 598px;
+                top: 113px;
+                background-color: #FFFFFF;
+                padding: 68px 21px 64px 13px;
+                right: 0;
+                border-radius: 50px 0;
+                text-align: center;
+
+                .circle-shape{
+                    width: 230px;
+                    height: 230px;
+                    border-radius: 50%;
+                    background-color: #ED9AA2;
+                    position: absolute;
+                    color: #ffffff;
+                    top: -15px;
+                    left: -19%;
+                    z-index: 9;
+                    text-align: center;
+                    padding: 72px 26px 40px 25px;
+                    font-family: 'Noto Sans', sans-serif;
+                    font-weight: 700;
+                    text-transform: capitalize;
+                }
+
+                .content-wrapper{
+                    padding: 0 70px 0;
+
+                    h3{
+                        font-weight: 700;
+                        font-size: 36px;
+                        margin-bottom: 20px 0;
+                        text-transform: capitalize;
+                        padding: 20px 0 20px;
+                        color: #ED9AA2;
+                    }
+                }                
+            }
+        }        
+    }
+}
+
+section.Galary-section{
+    padding: 0; 
+    
+    .container {
+       position: relative;
+    
+        .galary-grid {
+            display: grid;
+            position: absolute;
+            grid-template-columns: repeat(5, 1fr);
+            column-gap: 20px;
+            width: 100%;
+            left: 0;
+            bottom: -20px;
+        }
+
+        .instagram-box{
+            width: 100%;
+            height: 100%;
+            background: #ED9AA2;
+            border-radius: 50%;
+            padding-top: 100%;
+            text-align: center;
+
+            a {
+                font-size: 16px;
+                font-weight: 600;
+                font-family: 'Montserrat', sans-serif;
+
+                i{
+                    font-size: 40px !important;
+                    font-weight: 100 !important;
+                }
+            }
+        }
+
+        
+        
+
+        .full-image-parent {
+            padding-top: 100%;
+    
+            img {
+              border-radius: 50%;
+              overflow: hidden;
+            }
+        }
+    }
+}
+
