--- a/assets/css/less/_home.less
+++ b/assets/css/less/_home.less
@@ -329,7 +329,7 @@ section.testimonials-section{
                     background-color: #ED9AA2;
                     position: absolute;
                     color: #fff;
-                    top: px;
+                    top: 250px;
                     left: 490px;
                     z-index: 9;
                     text-align: center;
@@ -596,26 +596,46 @@ section.Galary-section{
     
         .galary-grid {
             display: grid;
-            position: absolute;
+            position: relative;
             grid-template-columns: repeat(5, 1fr);
             column-gap: 20px;
-            width: 100%;
-            left: 0;
-            bottom: -20px;
+            bottom: 220px;
+
+            div {
+                position: relative;
+                padding-top: 100%;
+                width: 100%;
+
+                img{
+                    position: absolute;
+                    top: 0;
+                    left:0;
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                    border-radius: 50%;
+                }
+            }
         }
 
         .instagram-box{
+            position: relative;
             width: 100%;
             height: 100%;
             background: #ED9AA2;
             border-radius: 50%;
             padding-top: 100%;
+            color: #FFFFFF  ;
             text-align: center;
 
             a {
-                font-size: 16px;
+                position: absolute;
+                font-size: 40px;
                 font-weight: 600;
-                font-family: 'Montserrat', sans-serif;
+                font-family: 'Montserrat',sans-serif;
+                top: 70px;
+                text-align: center;
+                left: 84px;
 
                 i{
                     font-size: 40px !important;
@@ -627,14 +647,14 @@ section.Galary-section{
         
         
 
-        .full-image-parent {
-            padding-top: 100%;
+        // .full-image-parent {
+        //     padding-top: 100%;
     
-            img {
-              border-radius: 50%;
-              overflow: hidden;
-            }
-        }
+        //     img {
+        //       border-radius: 50%;
+        //       overflow: hidden;
+        //     }
+        // }
     }
 }
 
