comlete design updated

--- a/assets/css/less/utilities/_common.less
+++ b/assets/css/less/utilities/_common.less
@@ -385,6 +385,7 @@ section.sub-page-banner {
 }
 
 .forminator-custom-form {
+    padding-left: 30px;
 
     .forminator-row {
         margin-bottom: 15px !important;
@@ -400,12 +401,12 @@ section.sub-page-banner {
         border-radius: 0px !important;
         padding: 12px 20px !important;
         border: 0 !important;
-        border-bottom: solid 1px #FFF !important;
-        color: #FFF !important;
+        border-bottom: solid 1px #437C71 !important;
+        color: #437C71!important;
         outline: 0px !important;
 
         &::placeholder {
-            color: #FFF !important;
+            color: #ED9AA2 !important;
         }
     }
 
