--- a/assets/css/less/utilities/_reset.less
+++ b/assets/css/less/utilities/_reset.less
@@ -251,11 +251,19 @@ section {
 	}
 }
 
+
+// remove code down
+///////////////////////////////
+
 // @media only screen and (min-width: 1600px) {
 // 	.container {
 // 		max-width: 80% !important;
 // 	}
 // }
+
+
+// remove code down
+///////////////////////////////
 
 // @media only screen and (min-width: 1025px) and (max-width: 1366px) {
 // 	.container {
