--- a/assets/css/less/_home.less
+++ b/assets/css/less/_home.less
@@ -3,7 +3,7 @@ section.banner-section {
     width: 100%;
     height: 100%;
     margin-top: 0;
-    // padding: 140px 0 0px;
+    padding: 200px 0 0;
 
     @media @mobileTab {
         text-align: center;
@@ -13,38 +13,21 @@ section.banner-section {
         text-align: center;
         
     }
+    &::before {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 42.19%);
+        z-index: 5;
 
-    // .full-image {
-    //     pointer-events: none;
-    //     width: 100%;
-    //     height: 100%;
-    //     margin-top: 0;
-       
-    //     @media @mobileTab {
-    //         width: 100%;
-            
-    //     }
-    // }
+        @media @mobileTab {
+            content: unset;
+        }
+    }
 
-    
-    
-
-    // &::before {
-    //     content: "";
-    //     position: absolute;
-    //     top: 0;
-    //     left: 0;
-    //     width: 100%;
-    //     height: 100%;
-    //     background: linear-gradient(180deg, rgba(0, 0, 0, 0.4) 0%, rgba(0, 0, 0, 0) 42.19%);
-    //     z-index: -1;
-
-    //     @media @mobileTab {
-    //         content: unset;
-    //     }
-    // }
-
-   
 
     .container {
         position: relative;
@@ -141,11 +124,6 @@ section.section-welcome-to {
                 height: 185px;
                 object-fit: cover; 
             }
-            // .right-img{
-            //     position: absolute;               
-            //     right: -30px;
-            //     top: 0px;
-            // }
 
             .right-img{
                 position: absolute;
@@ -274,20 +252,41 @@ section.testimonials-section{
     margin-top: 0;
 
     .row{
+         
         .col-lg-6{
+            padding-right:0;
+            padding-left:0;
             img{
                 padding-top: 50px;
                 border-radius: 0 0 50px 0;
             }
             .square{
                 position: relative;
-                width: 569px;
+                width: 100%;
                 height: 620px;
                 background-color: #FFF;
                 padding: 68px 21px 64px 13px;
                 right: 0;
                 border-radius: 50px 0;
                 text-align: center;
+
+                .circle-shape{
+                    position: absolute;
+                    width: 154px;
+                    height: 154px;
+                    border-radius: 50%;
+                    background-color: #ED9AA2;                   
+                    color: #fff;
+                    top: 250px;
+                    right: -75px;
+                    z-index: 9;
+                    text-align: center;
+                    padding: 72px 26px 40px 25px;
+                    font-family: 'Noto Sans',sans-serif;
+                    font-weight: 700;
+                    text-transform: capitalize;               
+                }
+
                 
                 img{
                     padding-top: 0; 
@@ -322,23 +321,7 @@ section.testimonials-section{
                     right: 40px; 
                 }
 
-                .circle-shape{
-                    width: 154px;
-                    height: 154px;
-                    border-radius: 50%;
-                    background-color: #ED9AA2;
-                    position: absolute;
-                    color: #fff;
-                    top: 250px;
-                    left: 490px;
-                    z-index: 9;
-                    text-align: center;
-                    padding: 72px 26px 40px 25px;
-                    font-family: 'Noto Sans',sans-serif;
-                    font-weight: 700;
-                    text-transform: capitalize;
-                }
-
+                
                 
             }
         }           
@@ -546,13 +529,20 @@ section.contact-section{
             .square{
                 position: relative;
                 width: 569px;
-                height: 598px;
+                height: 640px;
                 top: 113px;
-                background-color: #FFFFFF;
+                background-color: #ffffff;
                 padding: 68px 21px 64px 13px;
                 right: 0;
                 border-radius: 50px 0;
                 text-align: center;
+                z-index: 5;
+
+                .contactus-form{
+                    color: #ffffff;
+                    padding: 90px 60px 0 60px;
+                }
+                
 
                 .circle-shape{
                     width: 230px;
@@ -562,7 +552,7 @@ section.contact-section{
                     position: absolute;
                     color: #ffffff;
                     top: -15px;
-                    left: -19%;
+                    left: -29%;
                     z-index: 9;
                     text-align: center;
                     padding: 72px 26px 40px 25px;
@@ -573,14 +563,19 @@ section.contact-section{
 
                 .content-wrapper{
                     padding: 0 70px 0;
+                    position: absolute;
+                    z-index: 10;
+
+                    
 
                     h3{
                         font-weight: 700;
                         font-size: 36px;
                         margin-bottom: 20px 0;
                         text-transform: capitalize;
-                        padding: 20px 0 20px;
+                        padding: 20px 42px 20px;
                         color: #ED9AA2;
+                    
                     }
                 }                
             }
@@ -590,20 +585,21 @@ section.contact-section{
 
 section.Galary-section{
     padding: 0; 
+    margin-top: 0;
     
     .container {
-       position: relative;
+    //    position: relative;
     
         .galary-grid {
             display: grid;
             position: relative;
             grid-template-columns: repeat(5, 1fr);
             column-gap: 20px;
-            bottom: 220px;
+            bottom: 135px;
 
             div {
                 position: relative;
-                padding-top: 100%;
+                padding-top: 80%;
                 width: 100%;
 
                 img{
@@ -628,20 +624,25 @@ section.Galary-section{
             color: #FFFFFF  ;
             text-align: center;
 
-            a {
-                position: absolute;
-                font-size: 40px;
-                font-weight: 600;
-                font-family: 'Montserrat',sans-serif;
-                top: 70px;
-                text-align: center;
-                left: 84px;
+            .circle-icon{
+                position: absolute; 
 
-                i{
-                    font-size: 40px !important;
-                    font-weight: 100 !important;
+                a {
+                    font-size: 40px;
+                    font-weight: 600;
+                    font-family: 'Montserrat',sans-serif;
+                    top: 70px;
+                    text-align: center;
+                    left: 84px;
+    
+                    i{
+                        font-size: 40px !important;
+                        font-weight: 100 !important;
+                    }
                 }
             }
+
+           
         }
 
         
